# shopping-basket-api

./: .gitignore  README.md  pyproject.toml  samconfig.toml  template.yaml
src/healthcheck_endpoint/: ping.py
src/product/: product.py  product_category.py  product_repository.py  product_service.py  value_objects.py
src/product/infrastructure/: in_memory_product_repository.py
src/product_endpoint/: handlers.py
tests/integration/: conftest.py  test_healthcheck_endpoint.py  test_product.py
tests/unit/: test_handler.py
tests/unit/product/: conftest.py  test_product_service.py
tests/unit/product/infrastructure/: test_in_memory_product_repository.py
tests/unit/product_endpoint/: test_handler.py
